# alma-tv

./: .editorconfig  .env.example  .gitignore  .sesskey  INSTALL.md  README.md  TODOs.md  cleanup_db.py  config.yaml  convert_audio.py  plan.md  pyproject.toml  reindex.py  settings.ini
.github/workflows/: ci.yml
.ruler/: 2002_nbdev_python_first.md  2003_nbdev_project_structure.md
benchmarks/: __init__.py  __main__.py  conftest.py  playback_gap.py  scanner_bench.py  scheduler_bench.py
nbs/: 01_config.ipynb  02_library_scanner.ipynb  03_library_service.ipynb  04_scheduler_parser.ipynb  05_scheduler_weights.ipynb  06_scheduler_lineup.ipynb  07_scheduler_cli.ipynb  README.md  index.ipynb  nbdev_notebook_template.ipynb
scripts/: backup.sh  e2e_verify.py  generate_component_notebooks.py  generate_demo_clock.py  generate_notebook.py  generate_weights_notebook.py  logrotate.conf  restore.sh  run_pi_smoke.sh
services/: alma-clock.service.template  alma-feedback.service.template  alma-playback.service.template  alma-scheduler.service.template
src/alma_tv/: __init__.py  _modidx.py  cli.py
src/alma_tv/clock/: __init__.py  renderer.py  service.py
src/alma_tv/config/: __init__.py  settings.py
src/alma_tv/database/: __init__.py  models.py  session.py
src/alma_tv/feedback/: __init__.py  api.py  reporter.py  reporting.py  ui.py
src/alma_tv/logging/: __init__.py  config.py
src/alma_tv/playback/: __init__.py  orchestrator.py  players.py
src/alma_tv/scheduler/: __init__.py  lineup.py  parser.py  weights.py
src/alma_tv/web/: app.py  state.py
src/alma_tv/web/components/: clock.py  countdown.py  feedback.py  history.py  logo.py  player.py  request.py
src/alma_tv/web/routes/: admin.py  countdown.py  stream.py
systemd/: alma-clock.service  alma-feedback.service  alma-playback.service
tests/: __init__.py  conftest.py  test_logging.py  test_placeholder.py
tests/cli/: test_system_cli.py
tests/clock/: __init__.py  test_renderer.py
tests/config/: test_settings.py
tests/feedback/: test_feedback.py
tests/playback/: __init__.py  test_orchestrator.py
tests/scheduler/: test_lineup.py  test_parser.py  test_requests.py  test_weights.py
